Code cleanup: replaced list.get(0) by list.getFirst()